--- a/first1.html
+++ b/first1.html
@@ -30,6 +30,15 @@
             <td>bsb</td>
         </tr>
     </table>
+    <script>
+
+    </script>
+    <style>
+        
+    </style>
+    <div>
+
+    </div>
     <h9>Unorderd list</h2>
     <ul type="circle">
         <li>1</li>
