--- a/login_page.html
+++ b/login_page.html
@@ -7,6 +7,14 @@
     <title>error</title>
 </head>
 <body>
+    
+    <div class="topnav" style="background-color:rgb(13, 230, 249) ; text-align: center;;">
+        <a class="active" href="http://127.0.0.1:5500/college.html" target="_blank">College</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="http://127.0.0.1:5500/department.html">Department</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="#contact">Subject</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.niet.co.in/about-institute.php" target="_blank">More</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </div>
+    
     <h1 style="text-align:center;">Welcome</h1>
     <h2 style="text-align:center;"><b>Login</b></h2>
     <fieldset style="text-align:center;">
@@ -15,7 +23,7 @@
         <input type="number" name="rn" id="rn" placeholder="Type your roll number here..!"><br><br>
         <label for="pass" style="text-align:center;">Password   </label> &nbsp;
         <input type="password" name="pass" id="pass" placeholder="Enter password..!"><br><br>
-        <input type="button" value="Submit" onclick=""> &nbsp; &nbsp; &nbsp;&nbsp;<input type="button" value="cancel" onclick="">
+        <a href="http://127.0.0.1:5500/after_login.html" target="_blank"><input type="button" value="Submit" onclick=""></a> &nbsp; &nbsp; &nbsp;&nbsp;<input type="button" value="cancel" onclick="">
 
     </fieldset>
 </body>
